Add user online/offline status

--- a/public/assets/css/demo.css
+++ b/public/assets/css/demo.css
@@ -113,3 +113,13 @@
   text-align: center;
   margin-top: 1rem;
 }
+
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
